<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:weightSum="1" android:layout_gravity="center_horizontal">
        <ImageView android:layout_width="wrap_content" android:src="@drawable/icon" android:layout_weight="0.15" android:layout_height="67dp" android:id="@+id/prodIcon" android:layout_gravity="center_horizontal"></ImageView>
    </LinearLayout>
    <TextView android:layout_height="wrap_content" android:singleLine="false" android:textSize="7pt" android:text="TextView" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/prodName" android:layout_gravity="center_horizontal"></TextView>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:weightSum="1" android:layout_gravity="center_horizontal">
        <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:width="70dp" android:layout_weight="0.20" android:text="@string/defaultProductAmount" android:id="@+id/amountText">
            <requestFocus></requestFocus>
        </EditText>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/linearLayout3" android:layout_weight="0.20" android:orientation="vertical">
            <Button android:layout_width="24dp" android:layout_height="24dp" android:text="@string/incrementor" android:id="@+id/incr" android:textSize="3pt"></Button>
            <Button android:layout_width="24dp" android:layout_height="match_parent" android:text="@string/decrementor" android:id="@+id/decr" android:textSize="3pt"></Button>
        </LinearLayout>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/total" android:text="@string/total" android:layout_weight="0.10"></TextView>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/price" android:layout_weight="0.20" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/priceVal"></TextView>
    </LinearLayout>
    <Button android:layout_width="138dp" android:layout_height="wrap_content" android:id="@+id/order" android:text="@string/order" android:layout_gravity="center_horizontal"></Button>
    <LinearLayout android:layout_width="196dp" android:layout_height="wrap_content" android:id="@+id/linearLayout4" android:weightSum="1" android:paddingLeft="30dp">
    </LinearLayout>
	
</LinearLayout>