<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:layout_width="fill_parent" android:layout_height="90px">
    <ImageView android:id="@+id/shop_icon" android:layout_weight="0.16" android:layout_width="150px" android:layout_height="wrap_content" android:layout_gravity="left"></ImageView>
    <LinearLayout android:layout_height="match_parent" android:layout_width="wrap_content" android:id="@+id/linearLayout1" android:layout_weight="0.10" android:orientation="vertical" android:layout_gravity="left">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingLeft="10dip" android:textSize="14pt" android:text="Shop Name" android:id="@+id/shop_name"></TextView>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingLeft="10dip" android:id="@+id/shop_desc" android:text="@string/shops_list_desc" android:textSize="6pt"></TextView>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingLeft="10dip" android:id="@+id/shop_contacts" android:text="@string/shops_list_contacts" android:textSize="6pt"></TextView>
        <TextView android:layout_height="wrap_content" android:paddingLeft="10dip" android:textSize="8pt" android:layout_width="wrap_content" android:visibility="invisible" android:id="@+id/shop_id" android:text="@string/shops_list_id"></TextView>
    </LinearLayout>
</LinearLayout>